# em-x11

./: .eslintrc.json  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
demos/hello/: CMakeLists.txt  hello.c  index.html  main.ts
demos/session/: index.html  main.ts
demos/twm/: CMakeLists.txt  index.html  main.ts
demos/xaw-hello/: CMakeLists.txt  index.html  main.ts  xaw-hello.c
demos/xcalc/: CMakeLists.txt  index.html  main.ts
demos/xeyes/: CMakeLists.txt  index.html  main.ts
demos/xt-hello/: CMakeLists.txt  index.html  main.ts  xt-hello.c
docs/: multi-wasm.md  xorg-alignment.md
native/: CMakeLists.txt
native/include/: ORIGIN.txt
native/include/X11/: XlibConf.h
native/include/X11/ICE/: ICElib.h
native/include/X11/SM/: SMlib.h
native/include/X11/Xft/: Xft.h
native/include/X11/extensions/: Xrender.h  sync.h
native/include/fontconfig/: fontconfig.h
native/src/: atom.c  bridges.c  color.c  display.c  drawing.c  emx11_internal.h  emx11_meta_layout.h  error.c  event.c  event_keysym.c  event_queue.c  event_send.c  font.c  fontconfig.c  gc.c  gen_keysyms.awk  keysym_table.c  keysym_table.h  notifier.c  pixmap.c  property.c  selection.c  tk_shims.c  window.c  wm.c  xaw_stubs.c  xft.c  xrm.c  xt_stubs.c
native/src/ext/: shape.c  xrender.c
scripts/: fetch-third-party.sh
src/: main.ts
src/bindings/: atom.js  clipboard.js  core.js  draw.js  emx11.library.js  font.js  pixmap.js  property.js  window.js
src/host/: atom.ts  connection.ts  constants.ts  devices.ts  events.ts  gc.ts  grabs.ts  index.ts  property.ts  window.ts
src/host/render/: draw.ts  hit-test.ts  index.ts  paint.ts  region.ts  types.ts  window-tree.ts
src/loader/: wasm.ts
src/runtime/: app-defaults.ts  canvas.ts  compositor.ts  events.ts  host.ts  keymap.ts  twm-launch.ts  twmLaunch.ts  xcalc-launch.ts  xcalcLaunch.ts
src/types/: emscripten.d.ts
src/worker/client/: main.ts
src/worker/main-thread/: client-proxy.ts  input-forwarder.ts  orchestrator.ts  server-proxy.ts
src/worker/rpc/: channel.ts  protocol.ts  sab.ts
src/worker/server/: main.ts
xapps/xclock/: .gitlab-ci.yml  Clock.c  Clock.h  ClockP.h  Makefile.am  meson.build  meson.options  sm_stubs.h  xclock.c
xapps/xclock/man/: xclock.man
xapps/xeyes/: .gitlab-ci.yml
